log
Thu 28 Sep 2023 05:01:31 PM UTC: 
 tests:  0|4
total_score: 0/70
23d2f16
Thu 28 Sep 2023 05:05:15 PM UTC: 
 heap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bd42c4f
Thu 28 Sep 2023 05:07:07 PM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|3
total_score: 10/70
48277c3
Thu 28 Sep 2023 05:11:35 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
aee6fef
